# victus-ai

./: .dockerignore  .editorconfig  .env.example  .gitignore  DEMO.md  DEPLOYMENT.md  HOSTINGER.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  WORKER_DEPLOYMENT.md  alembic.ini  docker-entrypoint.sh  passenger_wsgi.py  pyproject.toml  requirements-cpanel.txt
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260301_0900_initial_schema.py  20260301_1100_triage_assessments.py  20260301_1200_toi_assessments.py  20260301_1300_calibration_records.py  20260301_1400_ble_calibration_extensions.py  20260301_1500_study_pre_registration.py  20260301_1600_data_governance.py  20260301_1700_maker_checker.py  20260301_1800_notifications.py  20260301_1900_per_disease_risks.py  20260301_2000_processing_jobs.py  20260301_2100_whatsapp_sessions.py  20260301_2200_whatsapp_session_user_link.py  20260301_2300_research_triage_cases.py  20260301_2400_clinician_participant_view.py  20260301_2500_referrals.py  20260301_2600_referral_notification_type.py  20260301_2700_ndpa_jurisdiction.py  20260301_2800_site_code.py  20260301_2900_referral_destination_types.py  20260301_3000_cdpa_jurisdiction.py  20260301_3100_kiosk_gateway.py  20260301_3200_participant_profiles.py  20260301_3300_referral_outcomes.py  20260301_3400_outcome_flywheel.py  20260301_3500_trajectory_rise_notification.py
apps/api/models/: toi_corrector_v1.pt.meta.json  triage_edl_dann_v1.pt.meta.json  triage_edl_multihead_v1.pt.meta.json  triage_edl_v1.pt.meta.json  triage_edl_v1_demo.pt.meta.json
apps/api/src/victus_api/: __init__.py  config.py  main.py
apps/api/src/victus_api/audit/: service.py
apps/api/src/victus_api/auth/: router.py  schemas.py  security.py  service.py
apps/api/src/victus_api/calibration/: __init__.py  router.py  schemas.py  service.py  statistics.py
apps/api/src/victus_api/clinical/: __init__.py  report.py  router.py  schemas.py  service.py
apps/api/src/victus_api/core/: claims.py  deps.py  exceptions.py  logging.py
apps/api/src/victus_api/db/: base.py  models.py  session.py
apps/api/src/victus_api/enrollment/: __init__.py  router.py  schemas.py  security.py  service.py
apps/api/src/victus_api/governance/: __init__.py  admin_router.py  admin_schemas.py  admin_service.py  anonymiser.py  jurisdictions.py  router.py  schemas.py  service.py
apps/api/src/victus_api/kiosk/: __init__.py  config.py  crypto.py  router.py  schemas.py  security.py  service.py
apps/api/src/victus_api/notifications/: __init__.py  dispatcher.py  router.py  schemas.py  service.py
apps/api/src/victus_api/pathways/: router.py
apps/api/src/victus_api/referrals/: __init__.py  router.py  schemas.py  service.py
apps/api/src/victus_api/research/: __init__.py  router.py  (+3 more)
apps/api/tests/: README.md  conftest.py  test_acquisition.py  test_claims_gate.py  test_clinical_report.py  test_enrollment.py  test_jurisdictions.py  test_kiosk_security.py  test_notification_enums.py  test_research_importer.py  test_rppg_ssl.py  test_toi_biomarker_gating.py  test_toi_corrector.py  test_toi_corrector_inference.py  test_toi_trajectory.py  test_training_evaluation.py  test_trajectory.py  test_triage_tasks.py  test_video_extract.py  test_whatsapp.py  test_worker_processor.py
apps/api/tests/integration/: _helpers.py  test_acquisition_worklist.py  test_admin_jurisdiction.py  test_care_loop_analytics.py  test_clinical.py  test_clinical_report.py  test_enrollment.py  test_governance_jurisdiction.py  test_kiosk_gateway.py  test_kiosk_worker.py  test_outcome_flywheel.py  test_pathway_a.py  test_pathway_b.py  test_referrals.py  test_research.py  test_research_import.py  test_toi_gating.py  test_toi_trajectory_endpoint.py  test_toi_trajectory_notify.py  test_trajectory_endpoint.py  test_trajectory_notify.py  test_triage_claims_gate.py  test_whatsapp_webhook.py
(+232 files in other folders)
