[project]
name = "victus-api"
version = "0.1.0"
description = "Victus AI FastAPI backend — auth, audit, dual-pathway orchestration, ML inference."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Victus AI" }]

dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.19",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.0",
    "orjson>=3.10.12",
    # Pathway B rPPG signal processing is part of the runtime contract,
    # not an optional research extra, so numpy/scipy ship with the wheel.
    "numpy>=2.1.3",
    "scipy>=1.14.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.2",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "types-passlib",
    # Auto-provisions an ephemeral PostgreSQL (bundled binaries, unix socket)
    # so the integration suite runs with no Docker daemon. CI overrides this by
    # setting DATABASE_URL to a postgres service container.
    "pgserver>=0.1.4",
]
ml = [
    "torch>=2.5.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
]
# WhatsApp rail: server-side video → rPPG RGB extraction (background worker only).
# Headless OpenCV (no GUI/X11) keeps it cPanel-friendly; the Haar face cascade
# ships inside the wheel, so there is no model file to vendor.
video = [
    "opencv-python-headless>=4.10.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/victus_api"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "C4", "UP", "S", "N", "ANN", "RUF", "SIM",
]
# flake8-type-checking ("TCH"/"TC") is intentionally NOT enabled. This is a
# FastAPI + Pydantic + SQLAlchemy codebase, all of which evaluate type
# annotations at RUNTIME (request/dependency parsing, model validation,
# Mapped[] columns). Moving those imports into `if TYPE_CHECKING:` blocks — as
# the rule demands — would break runtime behaviour, so the rule is a poor fit.
ignore = [
    "ANN401",  # Allow Any in specific places (response models)
    "S101",    # assert in tests
    "UP042",   # Keep explicit `(str, Enum)`: switching to StrEnum changes
               # `str(member)` semantics (name vs value), which is load-bearing
               # for logging and serialisation in the clinical audit trail.
]

# Greek letters and math operators are deliberate notation in the EDL / DANN /
# rPPG signal docstrings and comments (σ, γ, α, the multiplication sign, the
# true minus sign, and the Bland–Altman en dash).
allowed-confusables = ["−", "–", "σ", "γ", "α", "×"]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["ANN", "E501"]
"tests/**/*.py" = ["S", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["alembic.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --cov=victus_api --cov-report=term-missing"
markers = [
    "integration: black-box HTTP tests that run the live app against a real PostgreSQL database",
]

[tool.coverage.run]
branch = true
source = ["src/victus_api"]
